Apply Scale on object parented to empty applied only to empty #65900

Closed
opened 2019-06-18 11:29:22 +02:00 by Marcin Twarowski · 5 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-17 21:07, hash: 741641f4c3
Worked: 2.79

Short description of error
In 2.79 when you applied scale to objects and their parent empties it was applied to all of them at once. In 2.80 that has changed.

Exact steps for others to reproduce the error
Open blend file.
apply_scale_test.blend

  • There's a cube and an empty. Cube is parented to the empty. Each of them has a scale 0.6.
  • Select both of them and apply scale. Only the empty will have a scale set to one.

Select both of them and apply scale again. Now also cube has a scale set to one.

2.79 version:
apply_scale_test_2_79.blend

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-17 21:07, hash: `741641f4c3` Worked: 2.79 **Short description of error** In 2.79 when you applied scale to objects and their parent empties it was applied to all of them at once. In 2.80 that has changed. **Exact steps for others to reproduce the error** Open blend file. [apply_scale_test.blend](https://archive.blender.org/developer/F7120911/apply_scale_test.blend) - There's a cube and an empty. Cube is parented to the empty. Each of them has a scale 0.6. - Select both of them and apply scale. Only the empty will have a scale set to one. # Select both of them and apply scale again. Now also cube has a scale set to one. 2.79 version: [apply_scale_test_2_79.blend](https://archive.blender.org/developer/F7120914/apply_scale_test_2_79.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2019-06-18 15:09:25 +02:00
Member

@Sergey: you did the recent fix, mind checking?

@Sergey: you did the recent fix, mind checking?

This issue was referenced by 1fb5453916

This issue was referenced by 1fb545391665bcdf8b02545f846112a258e9b749

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65900
No description provided.