Fix T65900: Apply Scale doesn't work correct with parenting

Parents are to be handled prior to their children.